--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+      <link type="text/css" rel="starsheet" href="style.css">
+  </head>
+  <body>
 <p1>April 12, Friday</p1>
 
 <h1>Middle school side</h1>
@@ -58,3 +63,5 @@
             
             </div>
         </div>
+</body>
+</html>
