--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <link type="text/css" rel="starsheet" href="style.css">
+      <link type="text/css" rel="stylesheet" href="style.css">
   </head>
   <body>
 <p1>April 12, Friday</p1>
