--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <h1>Middle school side</h1>
 <div class="Row1">
-                <div class="lunch-cell" id="cell1">Monday--------    </div>
-                <div class="lunch-cell" id="cell2">Tuesday-------- </div>
+                <div id="cell1">Monday--------    </div>
+                <div id="cell2">Tuesday-------- </div>
                 <div id="cell3">Wednesday----- </div>
             </div>
 
