--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
+  
   <head>
-      <link type="text/css" rel="stylesheet" href="style.css">
+    <title>Lunch </title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+ 
   </head>
   <body>
 <p1>April 12, Friday</p1>
